--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.firebase:firebase-ml-vision:22.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -44,6 +45,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:21.1.0'
     implementation 'com.google.firebase:firebase-auth:19.0.0'
     implementation 'com.google.firebase:firebase-database:19.1.0'
+    implementation 'com.google.firebase:firebase-ml-vision-barcode-model:16.0.1'
     //thêm fix cái apk;
     implementation 'com.android.support:multidex:1.0.3'
     // Thêm thư viện vào đã
@@ -51,6 +53,11 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.github.technolifestyle:imageslider:1.5.6'
     implementation 'androidx.cardview:cardview:1.0.0'
-
+    //camera
+    implementation 'com.otaliastudios:cameraview:2.4.0'
+    implementation 'com.karumi:dexter:5.0.0'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.0'
+    implementation 'com.github.d-max:spots-dialog:1.1@aar'
 }
 apply plugin: 'com.google.gms.google-services'
