them fragmetn loc du lieu firebase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TimKiemActivity"></activity>
+        <activity android:name=".DoUongActivity"></activity>
+        <activity android:name=".LauNuongActivity" />
+        <activity android:name=".NhauActivity" />
+        <activity android:name=".AnVatActivty" />
+        <activity android:name=".NhaHangActivity" />
+        <activity android:name=".AnToiActivity" />
+        <activity android:name=".AnTruaActivity" />
+        <activity android:name=".AnSangActivty" />
+        <activity android:name=".TimKiemActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
