--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.0.0'
     implementation 'com.google.firebase:firebase-database:19.1.0'
     implementation 'com.google.firebase:firebase-ml-vision-barcode-model:16.0.1'
+    implementation 'com.google.firebase:firebase-storage:19.0.1'
     //thêm fix cái apk;
     implementation 'com.android.support:multidex:1.0.3'
     // Thêm thư viện vào đã
