--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.android.support:design:29.0.0'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
-    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
     implementation 'com.android.support:support-compat:29.0.0'
     implementation 'com.airbnb.android:lottie:3.1.0'
     //firebase thêm vào;
@@ -63,5 +62,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.android.support:cardview-v7:29.0.0'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 }
 apply plugin: 'com.google.gms.google-services'
